# static_file_server_axum_rs

./: Cargo.toml  readme.md
src/: error.rs  file_serve.rs  main.rs  router.rs
