[package]
name = "static_file_server_axum_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0", features = ["env-filter"] }

axum = "0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["fs"] }

async-recursion = "1"
